--- a/HidDisplay.DefaultConfigDataProviders/HidDisplay.DefaultConfigDataProviders.csproj
+++ b/HidDisplay.DefaultConfigDataProviders/HidDisplay.DefaultConfigDataProviders.csproj
@@ -5,17 +5,22 @@
     <Authors>Ben Burns</Authors>
     <Product>HidDisplay</Product>
     <Copyright>Ben Burns 2019</Copyright>
-    <FileVersion>1.1.5.1</FileVersion>
+    <FileVersion>1.2.1.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BurnsBac.HotConfig" Version="1.0.0" />
+    <PackageReference Include="BurnsBac.WindowsHardware" Version="1.0.1" />
     <PackageReference Include="Microsoft.Win32.Registry" Version="4.7.0" />
+    <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="System.Runtime.InteropServices.WindowsRuntime" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\HidDisplay.SkinModel\HidDisplay.SkinModel.csproj" />
-    <ProjectReference Include="..\WindowsHardware\WindowsHardware.csproj" />
   </ItemGroup>
 
   <ItemGroup>
