--- a/HidDisplay.DefaultConfigDataProviders/HidDisplay.DefaultConfigDataProviders.csproj
+++ b/HidDisplay.DefaultConfigDataProviders/HidDisplay.DefaultConfigDataProviders.csproj
@@ -8,6 +8,10 @@
     <FileVersion>1.2.1.1</FileVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\tolos\code\csharp\HidDisplay\HidDisplay.DefaultConfigDataProviders\HidDisplay.DefaultConfigDataProviders.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="BurnsBac.HotConfig" Version="1.0.0" />
     <PackageReference Include="BurnsBac.WindowsHardware" Version="1.0.1" />
