--- a/HidDisplay.SkinModel/HidDisplay.SkinModel.csproj
+++ b/HidDisplay.SkinModel/HidDisplay.SkinModel.csproj
@@ -9,6 +9,10 @@
     <FileVersion>1.2.1.1</FileVersion>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\tolos\code\csharp\HidDisplay\HidDisplay.SkinModel\HidDisplay.SkinModel.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="BurnsBac.HotConfig" Version="1.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
