--- a/HidDisplay.DefaultConfigDataProviders/HidDisplay.DefaultConfigDataProviders.csproj
+++ b/HidDisplay.DefaultConfigDataProviders/HidDisplay.DefaultConfigDataProviders.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\tolos\code\csharp\HidDisplay\HidDisplay.DefaultConfigDataProviders\HidDisplay.DefaultConfigDataProviders.xml</DocumentationFile>
+    <DocumentationFile>HidDisplay\HidDisplay.DefaultConfigDataProviders\HidDisplay.DefaultConfigDataProviders.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
