--- a/HidDisplay.DefaultPlugins/HidDisplay.DefaultPlugins.csproj
+++ b/HidDisplay.DefaultPlugins/HidDisplay.DefaultPlugins.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\tolos\code\csharp\HidDisplay\HidDisplay.DefaultPlugins\HidDisplay.DefaultPlugins.xml</DocumentationFile>
+    <DocumentationFile>HidDisplay\HidDisplay.DefaultPlugins\HidDisplay.DefaultPlugins.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
