--- a/HidDisplay.PluginDefinition/HidDisplay.PluginDefinition.csproj
+++ b/HidDisplay.PluginDefinition/HidDisplay.PluginDefinition.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\tolos\code\csharp\HidDisplay\HidDisplay.PluginDefinition\HidDisplay.PluginDefinition.xml</DocumentationFile>
+    <DocumentationFile>HidDisplay\HidDisplay.PluginDefinition\HidDisplay.PluginDefinition.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
