--- a/HidDisplayDnc/HidDisplayDnc.csproj
+++ b/HidDisplayDnc/HidDisplayDnc.csproj
@@ -8,11 +8,11 @@
     <ApplicationIcon>Icon.ico</ApplicationIcon>
     <Authors>Ben Burns</Authors>
     <Copyright>Ben Burns 2019</Copyright>
-    <FileVersion>1.2.1.1</FileVersion>
+    <FileVersion>1.2.2.1</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\tolos\code\csharp\HidDisplay\HidDisplayDnc\HidDisplayDnc.xml</DocumentationFile>
+    <DocumentationFile>HidDisplayDnc\HidDisplayDnc.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
